--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <h1>Vernon Bikes</h1>
 <p1>Here in North Texas bicycles are a big part of our culture.<br>
 This website is a tribute to that culture and a place to display<br>
-some of our custom bicycle art.</p1>
+some of our custom builds.</p1>
 </body>
 </html>
