--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>Vernon Bikes</head>
+<head>
+<style>
+  body {
+    background-color:maroon;
+    font: chalkboard;
+    font-size: 12px;
+  }
+</style>
+</head>
 <body>
 <h1>Vernon Bikes</h1>
 <p1>Here in North Texas bicycles are a big part of our culture.<br>
