--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
 <style>
   body {
-    background-color:maroon;
-    font: chalkboard;
-    font-size: 12px;
+    background-color: maroon;
   }
+  h1 {
+    font-size: 24 px;
+    font-color: white;
+  }
+  p1 {
+    font-size: 12 px;
+    font-color: white;
+  } 
 </style>
 </head>
 <body>
