--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     background-color: maroon;
   }
   h1 {
-    font-size: 24 px;
-    font-color: white;
+    color: white;
   }
   p1 {
-    font-size: 12 px;
-    font-color: white;
+   color: white;
   } 
 </style>
 </head>
