--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-  body {
-    background-color: maroon;
-  }
-  h1 {
-    color: white;
-  }
-  p1 {
-   color: white;
-  } 
-</style>
+ <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Vernon Bikes</h1>
