--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<img src="https://i.imgur.com/VjlZTVm.png" alt="Vernon Bikes Logo" height="53" width="136">
+<img src="https://i.imgur.com/VjlZTVm.png" alt="Vernon Bikes Logo">
 <p1>Here in North Texas bicycles are a big part of our culture.<br>
 This website is a tribute to that culture and a place to display<br>
 some of our custom builds.</p1>
