--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
 <body>
 <img src="https://i.imgur.com/VjlZTVm.png" alt="Vernon Bikes Logo">
 </body>
+<div class="menu">
+<?php include 'index.php';?>
+</div>
 </html>
